infra/old/k8s/monitoring/grafana-ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: grafana
  namespace: default
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`grafana.admin.frikanalen.no`) 
    kind: Rule
    services:
    - kind: Service
      name: prometheus-stack-grafana
      namespace: monitoring
      scheme: http
      port: 80
  tls:
    certResolver: default
