infra/old/k8s/monitoring/prom-ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: prometheus
  namespace: default
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`prometheus.admin.frikanalen.no`) 
    kind: Rule
    middlewares:
    - name: basic-admin-auth 
    services:
    - kind: Service
      name: prometheus-stack-kube-prom-prometheus
      namespace: monitoring
      scheme: http
      port: 9090
  tls:
    certResolver: default
